--- a/app/src/main/res/layout/activity_customer_detail.xml
+++ b/app/src/main/res/layout/activity_customer_detail.xml
@@ -37,6 +37,7 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/customer_detail_container"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
