--- a/app/src/main/res/layout/customer_detail.xml
+++ b/app/src/main/res/layout/customer_detail.xml
@@ -161,14 +161,15 @@
     </android.support.v7.widget.CardView>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customerDetailCardView">
 
         <Button
-            style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/button16"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/record_sale"
@@ -177,8 +178,8 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/messageBtn"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/message"
@@ -188,8 +189,8 @@
             app:layout_constraintTop_toTopOf="@+id/button16" />
 
         <Button
-            style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/redeemBtn"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/redeem"
