--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
     <!--Shareable attributes-->
     <attr name="backGroundColor" format="color"/>
+    <attr name="backgroundDrawable" format="reference"/>
 
     <declare-styleable name="FullRectangleButton">
         <attr name="backGroundColor" />
@@ -10,6 +11,10 @@
     <declare-styleable name="SpinnerButton">
         <attr name="android:prompt" />
         <attr name="android:entries" />
+    </declare-styleable>
+
+    <declare-styleable name="ActionButton">
+        <attr name="backgroundDrawable"/>
     </declare-styleable>
 
 </resources>
