--- a/app/src/main/res/layout/activity_birthday_offers_and_messaging.xml
+++ b/app/src/main/res/layout/activity_birthday_offers_and_messaging.xml
@@ -14,8 +14,9 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/activity_birthday_offers_and_messaging_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <android.support.design.widget.TabLayout
