--- a/app/src/main/res/layout/activity_my_account_profile.xml
+++ b/app/src/main/res/layout/activity_my_account_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_my_account_profile_wrapper"
     tools:context="co.loystar.loystarbusiness.activities.MyAccountProfileActivity">
 
     <android.support.design.widget.AppBarLayout
